--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>TO-DO-FB</title>
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css">
   </head>
   <body>
     <!-- nav start -->
     <nav id="navigation">
       <div class="container">
         <ul class="navIcons">
-          <li class="navicon"><i class="fa-solid fa-house"></i></li>
+          <li class="navicon active"><i class="fa-solid fa-house"></i></li>
           <li class="navicon"><i class="fa-solid fa-user-group"></i></li>
           <li class="navicon"><i class="fa-solid fa-store"></i></li>
           <li class="navicon"><i class="fa-brands fa-facebook-messenger"></i></li>
