--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <nav id="navigation">
       <div class="container">
         <ul class="navIcons">
-          <li class="navicon active"><i class="fa-solid fa-house"></i></li>
-          <li class="navicon"><i class="fa-solid fa-user-group"></i></li>
-          <li class="navicon"><i class="fa-solid fa-store"></i></li>
-          <li class="navicon"><i class="fa-brands fa-facebook-messenger"></i></li>
-          <li class="navicon"><i class="fa-solid fa-bell"></i></li>
+          <li class="navicon active"><a href="index.html"><i class="fa-solid fa-house"></i></a></li>
+          <li class="navicon"> <a href="friendrequest.html"><i class="fa-solid fa-user-group"></i></a></li>
+          <li class="navicon"><a href="#"><i class="fa-solid fa-store"></i></a></li>
+          <li class="navicon"><a href="#"><i class="fa-brands fa-facebook-messenger"></i></a></li>
+          <li class="navicon"><a href="#"><i class="fa-solid fa-bell"></i></a></li>
         </ul>
       </div>
     </nav>
